[package]
name = "node-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
toml = "0.8"
chrono = "0.4"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"]}
tracing-appender = "0.2"
tracing-rolling = "0.3"
tracing-attributes = "0.1"
tracing-fmt = "0.1"

jsonwebtoken = "9.3"
tower = { version = "0.5.1", features = ["full"] }
futures-util = "0.3.30"
hyper = "1.4.1"
tower-http = { version = "0.6.1", features = ["full"] }
random-number = "0.1.8"

sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
